--- a/src/index.css
+++ b/src/index.css
@@ -25,3 +25,10 @@
     src: url("./assets/fonts/LeagueSpartan-Bold.ttf");
     font-weight: 700;
 }
+
+@layer utilities {
+    .clip-test {
+        -webkit-clip-path: polygon(0 30%, 0% 100%, 100% 100%, 100% 30%);
+        clip-path: polygon(0 30%, 0% 100%, 100% 100%, 100% 30%);
+    }
+}
